--- a/src/main/resources/reports/Flower_Landscape.jrxml
+++ b/src/main/resources/reports/Flower_Landscape.jrxml
@@ -53,13 +53,13 @@ $V{REPORT_COUNT}]]></keyExpression>
 				<reportElement x="-20" y="65" width="229" height="250" uuid="20bb2440-c413-4a05-a706-a10d8c847aba">
 					<printWhenExpression><![CDATA[$V{PAGE_NUMBER} == 1]]></printWhenExpression>
 				</reportElement>
-				<imageExpression><![CDATA["flower1.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagesDir}]]></imageExpression>
 			</image>
 			<image>
 				<reportElement x="-20" y="-20" width="229" height="250" uuid="5a4947cf-88fa-4c35-83d8-b8d2e9d03edc">
 					<printWhenExpression><![CDATA[$V{PAGE_NUMBER} > 1]]></printWhenExpression>
 				</reportElement>
-				<imageExpression><![CDATA["flower1.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imagesDir}]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement mode="Opaque" x="318" y="315" width="239" height="181" backcolor="#FFFFCC" uuid="0f98be0a-3da9-4645-8383-7bd38e4a88b4">
