--- a/src/main/resources/reports/Blank_A4.jrxml
+++ b/src/main/resources/reports/Blank_A4.jrxml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.17.0.final using JasperReports Library version 6.17.0-6d93193241dd8cc42629e188b94f9e0bc5722efd  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1934c8a4-7a80-46ae-89ba-52f82e0f6f09">
-	<queryString>
-		<![CDATA[]]>
-	</queryString>
-	<!-- <field name="createdBy" class="java.lang.String"/> -->
+<parameter name = "createdBy" class = "java.lang.String"/>
+	
 	<field name="id" class="java.lang.Integer"/>
 	<field name="name" class="java.lang.String"/>
 	<field name="gender" class="java.lang.Integer"/>
@@ -26,10 +24,10 @@
 				</textElement>
 				<text><![CDATA[My Report]]></text>
 			</staticText>
-			<staticText>
+			<textField>
 				<reportElement x="-11" y="7" width="128" height="13" uuid="82bb498c-876a-4ba9-b899-5e6c3f75d772"/>
-				<text><![CDATA[Create By: tamnd]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA["Created by : " +$P{createdBy}]]></textFieldExpression>
+			</textField>
 			<textField pattern="HH:mm">
 				<reportElement x="477" y="35" width="111" height="15" uuid="23808380-7b31-4364-8dad-e1303c7f267a"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
@@ -71,14 +69,14 @@
 				<reportElement x="0" y="0" width="71" height="20" uuid="4bfc4382-52de-4dba-aff9-598e1f739982"/>
 				<textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<!-- <textField>
 				<reportElement x="160" y="0" width="91" height="20" uuid="8c2d153a-7f90-42ce-bea1-f0b6ad7abc22"/>
 				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="340" y="0" width="100" height="20" uuid="f8527cdf-508f-4167-8099-68fcc1290f19"/>
 				<textFieldExpression><![CDATA[$F{gender} == 0 ? "Male" : "Female"]]></textFieldExpression>
-			</textField>
+			</textField> -->
 		</band>
 	</detail>
 	<columnFooter>
