--- a/src/main/resources/reports/Blank_A4.jrxml
+++ b/src/main/resources/reports/Blank_A4.jrxml
@@ -3,9 +3,9 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1934c8a4-7a80-46ae-89ba-52f82e0f6f09">
 <parameter name = "createdBy" class = "java.lang.String"/>
 	
-	<field name="id" class="java.lang.Integer"/>
-	<field name="name" class="java.lang.String"/>
-	<field name="gender" class="java.lang.Integer"/>
+	<field name="id" class="java.lang.Long"/>
+	<field name="pl1" class="java.lang.Long"/>
+	<field name="pl2" class="java.lang.Long"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -69,13 +69,17 @@
 				<reportElement x="0" y="0" width="71" height="20" uuid="4bfc4382-52de-4dba-aff9-598e1f739982"/>
 				<textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
 			</textField>
-			<!-- <textField>
+			<textField>
 				<reportElement x="160" y="0" width="91" height="20" uuid="8c2d153a-7f90-42ce-bea1-f0b6ad7abc22"/>
-				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pl1}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="340" y="0" width="100" height="20" uuid="f8527cdf-508f-4167-8099-68fcc1290f19"/>
-				<textFieldExpression><![CDATA[$F{gender} == 0 ? "Male" : "Female"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pl2}]]></textFieldExpression>
+			</textField>
+			<!-- <textField>
+				<reportElement x="340" y="0" width="100" height="20" uuid="f8527cdf-508f-4167-8099-68fcc1290f19"/>
+				<textFieldExpression><![CDATA[$F{pl2} == 0 ? "Male" : "Female"]]></textFieldExpression>
 			</textField> -->
 		</band>
 	</detail>
